# interview-ofogh

./: .gitignore  Pipfile  docker-compose.db-only.yaml  docker-compose.yaml  pyproject.toml
testProject/: Dockerfile
testProject/cars/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
testProject/cars/migrations/: 0001_initial.py  0002_alter_car_id.py  0003_alter_car_id.py  0004_travel_car_roads_traveled_travel_car_travel_road.py  0005_alter_car_roads_traveled.py  0006_alter_car_roads_traveled.py  0007_car_current_location_car_last_update_location.py
testProject/preload_data/: owners.json  populate_db.py
testProject/road/: admin.py  models.py  regulations.py
testProject/road/Utils/: geom_zones.py  junk.ipynb
testProject/road/Utils/gadm40_IRN_shp/: gadm40_IRN_1.dbf  gadm40_IRN_1.shp  gadm40_IRN_1.shx  gadm40_IRN_2.dbf  gadm40_IRN_2.shp  gadm40_IRN_2.shx
testProject/road/migrations/: 0001_initial.py  0002_delete_travel.py
testProject/testProject/: settings.py  urls.py  wsgi.py
testProject/user/: filters.py  models.py  serializers.py  urls.py  views.py
testProject/user/management/commands/: preload_db.py
testProject/user/migrations/: 0001_initial.py
