[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Navid", email = "nfilsaraee@gmail.com"},
]
dependencies = [
    "psycopg2>=2.9.3",
    "django>=4.0.4",
    "psycopg>=3.0.12",
    "psycopg2-binary>=2.9.3",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
